[package]
name = "acmi-compress"
version = "0.1.0"
edition = "2021"

# Profiling!
[profile.dev]
opt-level = 2

[profile.release]
debug = true

[dependencies]
atty = "0.2.0"
anyhow = { version = "1.0", features = ["backtrace"] }
camino = "1.0"
ciborium = "0.2"
clap = { version = "3.0", features = ["derive"] }
crossbeam = { version = "0.8", features = ["crossbeam-channel"] }
log = "0.4"
simplelog = "0.12"
tacview = { git = "https://github.com/mrkline/tacview", rev = "aaa97cd27be2e93e0ff23b75dff4fca8e2aa8fdb" }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
