[package]
name = "acmi-compress"
version = "0.1.0"
edition = "2021"

# Profiling!
[profile.dev]
opt-level = 2

[profile.release]
debug = true

[dependencies]
atty = "0.2.0"
anyhow = { version = "1.0", features = ["backtrace"] }
bytesize = "1.1"
camino = "1.0"
ciborium = "0.2"
clap = { version = "3.0", features = ["derive"] }
crossbeam = { version = "0.8", features = ["crossbeam-channel"] }
log = "0.4"
simplelog = "0.12"
tacview = { git = "https://github.com/mrkline/tacview", rev = "b057ba2c2755a957b383667c5a25b574f93c4802" }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
